--- a/jodok/src/components/atoms/input/InputText.styles.css
+++ b/jodok/src/components/atoms/input/InputText.styles.css
@@ -1,9 +1,13 @@
-#search{
+.input-text input{
     width: 100%;
     height: 4rem;
     padding: 2rem;
     border-color: #E7E5DF;
     border-style: solid;
     border-width: 0.1rem;
-    border-radius: 0.3rem;
+    border-right-width: 0;
+    border-radius: 5rem;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+
 }
