--- a/jodok/src/components/molecules/SearchBar/SearchBar.css
+++ b/jodok/src/components/molecules/SearchBar/SearchBar.css
@@ -4,6 +4,16 @@
     grid-template-columns: 85% 15%;
 }
 
+.recipe-list{
+    grid-column: 1;
+    padding: 1rem;
+    font-size: 1.5rem;
+}
+
+.hidden{
+    display: none;
+}
+
 #search-icon{
     height: 2rem;
 }
@@ -12,4 +22,54 @@
     .search-bar{
         grid-template-columns: 95% 5%;
     }
+}
+
+.search-input{
+    display: grid;
+    grid-template-columns: 92% 8%;
+    margin: 1rem 2rem;
+}
+
+.search-icon{
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5rem;
+    border-width: 0.1rem;
+    border-style: solid;
+    border-color: #E7E5DF;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    border-left-width: 0;
+}
+.data-result{
+    display: grid;
+    margin: 0 2rem;
+    height: 16rem;
+    box-shadow: 0rem 0.5rem 2rem rgba(0,0,0,0.05);
+    width: 90%;
+    border-radius: 0.3rem;
+    overflow: hidden;
+    overflow-y: auto;
+}
+
+.data-result::-webkit-scrollbar {
+    display: none;
+}
+
+.data-result .data-item{
+    display: grid;
+    align-items: center;
+    padding-left: 2rem;
+    width: 100%;
+    height: 4rem;
+    font-size: 1.5rem;
+    color: var(--clr-eerie-black);
+}
+
+a {
+    text-decoration: none;
+}
+a:hover{
+    background-color: var(--clr-magnolia);
 }
